fix footer spacing issue. Better Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -487,7 +487,7 @@ footer {
   font-size: 4rem; }
 
 .social-icons-container {
-  padding-top: 10px;
+  padding-top: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
