--- a/sass/main.scss
+++ b/sass/main.scss
@@ -529,7 +529,7 @@ footer {
   font-size: $font-size-h1;
 }
 .social-icons-container {
-  padding-top: 10px;
+  padding-top: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
